--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <body color="red">
         <div>
             <h1 style="font-family: Arial;">Aprendiendo HTML</h1>
+            <h2 id="subtituloPrincipal">Y es muy divertido</h2>
         </div>
         <hr/>
         <div>
-            <p id="parrafo-inicial">
+            <p id="parrafo-inicial" class="parrafo">
                 <a href="detalle.html" target="_blank" >Lorem Ipsum</a> is simply dummy text 
                 of the printing and typesetting 
                 industry. Lorem Ipsum has been the 
@@ -19,7 +20,7 @@
                 of type and scrambled it to 
                 make a type specimen book. 
             </p>
-            <p>
+            <p class="parrafo">
                 <i>It has survived not only</i> 
                 five centuries, but also the 
                 leap into electronic typesetting, 
@@ -32,7 +33,7 @@
                  PageMaker including versions of 
                  Lorem Ipsum.
                  <br/>
-                <blockquote><i>"It has survived" not only</i> 
+                <blockquote class="blockquote">"It has survived" not only
                 five centuries, but also the 
                 leap into electronic typesetting, 
                 remaining essentially unchanged. 
@@ -42,7 +43,7 @@
                  and more recently with desktop 
                  publishing software like Aldus 
                  PageMaker including versions of 
-                 Lorem Ipsum.</i>
+                 Lorem Ipsum.
                 </blockquote>
                 <br>
                 It has survived not only
