--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Pagina Hello World</title>
+        <link rel="icon" type="image/png" href="imagen.png">
         <link href="estilos.css" type="text/css" rel="stylesheet"/>
     </head>
     <body color="red">
@@ -57,7 +58,7 @@
                 </ul>
                 Lorem ipsum blaa:
             </p>
-            <img src="imagen.jpg"/>
+            <img src="imagen.png"/>
             <video autoplay="true" controls>
                 <source src="mov_bbb.mp4" type="video/mp4" />
             </video>
