--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <link href="estilos.css" type="text/css" rel="stylesheet"/>
     </head>
     <body color="red">
+        <div class="pop-up">
+            
+        </div>
         <div>
             <h1 style="font-family: Arial;">Aprendiendo HTML</h1>
             <h2 id="subtituloPrincipal">Y es muy divertido</h2>
@@ -103,7 +106,6 @@
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        
 
     </body>
 </html>
